2009-12-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Port.cpp: deal correctly with reads that
	arrive while a reply is being made to another message, using 
	the read(*,true) ... reply(*) mechanism (thanks Ugo, Lorenzo!)

2009-11-30  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: add a
	command to support finding the first existing directory
	in the search path, following Christian Wressnegger's
	use case on the robotcub-hackers mailing list.

	* src/libYARP_OS/src/BottleImpl.cpp: fix bug in parsing
	scientific notation (thanks Sergey Skachek).

	* src/libYARP_OS/harness/BottleTest.cpp: test parsing of
	scientific notation.

2009-11-25  Lorenzo Natale <nat@liralab.it>

	* yarp/os/Os.h/Os.cpp: simple wrappers for some functions in ACE_OS.

2009-11-25  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/YarpReqLib.cmake: fix newline problem in definition list
	that shows up with cmake 2.4-5 (debian etch)

2009-11-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/UsePkgConfig.cmake: use "modern" (>= cmake 2.4) pkg-config
	tests when available.

	* conf/YarpModuleHooks.cmake: merge libYARP_dev material into
	yarpmod when devices are to be loaded automatically.  Otherwise
	there is a circular dependency between libYARP_dev and yarpmod
	that causes occasional problems.

	* conf/FindGtkPlus.cmake: pass along the GTKPLUS_LIBRARY_DIR
	setting, needed for some setups (thanks Giovanni Saponaro,
	Frank Forster, Gianluca Massera).

2009-11-16  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/harness/PropertyTest.cpp: expanded regression test
	for include syntax.

	* src/libYARP_OS/src/Property.cpp: fix tagged includes (the syntax
	[include TAG "filename.ini] was not doing what it should have).
	Thanks Christian Wressnegger for reporting this!

2009-11-13  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_math/CMakeLists.txt: applied patch by