@@ -18,9 +18,8 @@ HEIGHT=100 BORDER=0 ALT="YARP"></A>
 
 Here is the most recent source code package for YARP:
 <ul>
-<li><A HREF="http://downloads.sourceforge.net/yarp0/yarp-2.2.4.tar.gz">yarp-2.2.4.tar.gz</A> stable release for UNIX.</li>
-<li><A HREF="http://downloads.sourceforge.net/yarp0/yarp-2.2.4.zip">yarp-2.2.4.zip</A> stable release for Windows.</li>
-<li><A HREF="http://downloads.sourceforge.net/yarp0/yarpdoc-2.2.4.zip">yarpdoc-2.2.4.zip</A>, documentation</li>
+<li><A HREF="http://downloads.sourceforge.net/yarp0/yarp-2.2.5.tar.gz">yarp-2.2.5.tar.gz</A> stable release for UNIX.</li>
+<li><A HREF="http://downloads.sourceforge.net/yarp0/yarp-2.2.5.zip">yarp-2.2.5.zip</A> stable release for Windows.</li>
 </ul>
 
 <a href=http://www.cmake.org>CMake</a> is recommended for building these
@@ -134,6 +133,12 @@ To get the source code, do:
 <h2>Older versions</h2>
 
 Older, stable versions of YARP:
+
+<ul>
+<li><A HREF="http://downloads.sourceforge.net/yarp0/yarp-2.2.4.tar.gz">yarp-2.2.4.tar.gz</A> stable release for UNIX.</li>
+<li><A HREF="http://downloads.sourceforge.net/yarp0/yarp-2.2.4.zip">yarp-2.2.4.zip</A> stable release for Windows.</li>
+<li><A HREF="http://downloads.sourceforge.net/yarp0/yarpdoc-2.2.4.zip">yarpdoc-2.2.4.zip</A>, documentation</li>
+</ul>
 
 <ul>
 <li><A HREF="http://downloads.sourceforge.net/yarp0/yarp-2.2.3.tar.gz">yarp-2.2.3.tar.gz</A> stable release for UNIX.</li>
